--- a/style.css
+++ b/style.css
@@ -19,9 +19,11 @@
     box-shadow: 0px 0px 7px rgb(255, 255, 255); 
    }
 
+
    @media only screen and (max-width: 600px) {
     main {
         border-radius: 0px;
+        margin: 0px auto;
     }
 }
 
@@ -64,7 +66,7 @@
 
    main h2 {
     padding-top: 30px;
-    color:  #ffd900;
+    color:  #87ff1e;
     text-align: center;
    }
 
@@ -82,13 +84,20 @@
 
    nav > a {
     text-decoration: none;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     font-weight: bolder;
-    padding: 10px;
-    margin-left: 180px;
+    padding: 3px;
+    margin-left: 198px;
     transition: 1s;
     font-size: 1.1em;
    }
+
+   @media only screen and (max-width: 500px) {
+    nav > a {
+        margin-left: 30px;
+        color: black;
+    }
+}
 
    nav a:hover{
     transition: cubic-bezier(0.95, 0.05, 0.795, 0.035);
@@ -128,4 +137,14 @@
             width: 100%;
         }
     }
+   }
+
+   @media only screen and (max-width: 600px) {
+    video {
+        width: 100%;
+    }
+}
+
+   video{
+    box-shadow: 0px 0px 7px rgb(136, 255, 0);
    }
